--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_BACKEND_URL="http://localhost:3000"
+const ClientId =
+    "454704357887-cirshapfhvtvve3en4q0svo5q53kbcec.apps.googleusercontent.com";
